# FlashMoE

./: .gitignore  CMakeLists.txt  README.md  playground.py  pyproject.toml  quickstart.py
csrc/: CMakeLists.txt
csrc/include/flashmoe/: bootstrap.cuh  combine.cuh  context.cuh  dispatch.cuh  flashmoe.cuh  gate.cuh  moe.cuh  os.cuh  processor.cuh  scheduler.cuh  subscriber.cuh  tile.cuh
csrc/include/flashmoe/experimental/: topo.cuh
csrc/include/flashmoe/experimental/decider/: decider.cuh
csrc/include/flashmoe/experimental/decider/comps/: edge.cuh
csrc/include/flashmoe/infra/: activation.cuh  atomics.cuh  bitset.cuh  checks.cuh  constants.cuh  heap.cuh  math.cuh  packed.cuh  rvt.cuh  signal.cuh  structures.cuh  task.cuh  telemetry.cuh  vt.cuh
csrc/include/flashmoe/platform/: atomic.h  device.h  intrinsics.h  math_compat.h  platform.h  profiling.h  runtime.h  shmem.h
csrc/tests/: combine.cu  common.cuh  debug.cuh  diagGEMM.cu  flashmoe.cu  gate.cu  gatedGEMM.cu  gemm.cu  gemmMNK.cu  host_reference.cuh  playground.cu  scheduler.cu  testPrecision.cu
docs/: build-guide.md  phase-plan.md  platform-abstraction.md  porting-overview.md  porting-status.md  rocblasdx.md
flashmoe/: CMakeLists.txt  __init__.py  bindings.py  cb.py  jit.py  reference.py  router.py
rocblasdx/: CMakeLists.txt
rocblasdx/include/rocblasdx/: fragment.hpp  gemm.hpp  layout.hpp  mfma.hpp  rocblasdx.hpp  types.hpp
rocblasdx/tests/: test_gemm.cpp
rocshmem-python/: CMakeLists.txt  setup.py
rocshmem-python/rocshmem/: __init__.py
rocshmem-python/scripts/: build_and_test.sh
rocshmem-python/src/: rocshmem_bindings.cpp
scripts/: build_rocshmem.sh  phase3_validate.sh  phase4_validate.sh  setup.sh
