[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flashmoe"
version = "0.1.0"
readme = "README.md"
license = {text = "BSD 3-Clause License"}
description = "Completely Fused Distributed MoE"
requires-python = ">=3.10"
authors = [
  { name = "Osayamen Jonathan Aimuyo", email = "osayamen@stanford.edu" },
]
dependencies = [
    "cuda-core"
]

[project.optional-dependencies]
cu12 = ["nvshmem4py-cu12"]
cu13 = ["nvshmem4py-cu13"]

[project.urls]
Homepage = "https://github.com/osayamenja/FlashMoE"
Repository = "https://github.com/osayamenja/FlashMoE"

[tool.setuptools]
packages = ["flashmoe"]

[tool.setuptools.package-data]
# IMPORTANT: include the headers in the package
flashmoe = [
  "CMakeLists.txt",
]